--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
-
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,8 @@
   },
   "homepage": "https://github.com/b1n024/tuiter-react-web-app#readme",
   "dependencies": {
+    "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
